2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_validate_cluster_cfg): Relax constraints: allow
	uneven number of cores and uneven base column.
	Fix coreid range check.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_mem.c (epiphany_mem_io_read_buffer): Fix trace output
	formatting.
	(epiphany_mem_io_write_buffer): Likewise.

2015-11-29  Ola Jeppsson  <ola@adapteva.com>

	* ert-workgroup.h: New file.
	* esim/esim.c (es_get_cluster_cfg): New function.
	* esim/esim.h (es_get_cluster_cfg: Add function prototype.
	* sim-if.c (setup_workgroup_cfg): New function. If workgroup_cfg
	section is present in binary, fill in mesh properties.
	(sim_create_inferior): Call setup_workgroup_cfg (), unless in
	operating environment.

2015-11-27  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.h (es_cluster_cfg): Add core_phys_mem member.
	(es_get_core_phys_mem_size): Add prototype.
	* esim/esim.c (es_addr_translate): Check that address is backed by
	physical memory.
	(es_validate_cluster_cfg): Validate core_phys_mem field in es_cluster.
	(es_dump_config): Print core_phys_mem.
	(es_get_core_phys_mem_size): New function.
	* sim-if.c (struct emesh_params): Add core_mem.
	(options_epiphany): Add '--e-core-mem' flag.
	(epiphany_mem_size_option_handler): Add case for E_OPTION_CORE_MEM.
	(sim_esim_init): Set core_phys_mem in cluster.
	* epiphany-elf-sim.py.in (pow_of_two): New function.
	(parse_or_die): Add '--core-mem' argument.

2015-11-27  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (epiphany_mem_size_option_handler): New
	function. Supports 'K', 'M', and 'G' suffixes.
	(epiphany_option_handler): Remove E_OPTION_EXT_RAM_SIZE case.
	(options_epiphany): Use epiphany_mem_size_option_handler for
	E_OPTION_EXT_RAM_SIZE.
	* epiphany-elf-sim.py.in (breakwhen): New function.
	(not_number_part): Ditto.
	(parse_size): New function that can parse size arguments.
	(parse_or_die): Parse ext_ram_size with parse_size.

2015-11-26  Ola Jeppsson  <ola@adapteva.com>
